# chatplatphorm

./: README.md  package-lock.json  package.json
backend-chat/auth-service/: .env  .env.docker  Dockerfile
backend-chat/auth-service/migrations/: 0001_init.sql
backend-chat/auth-service/src/: db.rs  main.rs
backend-chat/auth-service/src/handlers/: auth.rs
backend-chat/chat_news/: .env  .gitignore  Cargo.toml  Dockerfile
backend-chat/chat_news/src/: auth.rs  config.rs  jwt.rs  main.rs  models.rs
backend-chat/chat_news/src/api/: chats.rs  messages.rs
backend-chat/chat_news/src/auth/: middleware.rs
backend-chat/chat_news/src/db/: messages.rs  mod.rs  refresh_tokens.rs  schema.cql
backend-chat/chat_news/src/kafka/: consumer.rs  mod.rs  producer.rs
backend-chat/chat_news/src/notify/: push.rs
backend-chat/chat_news/src/processors/: message.rs
backend-chat/chat_news/src/user/: status.rs
backend-chat/chat_news/src/websocket/: gateway.rs  handler.rs  manager.rs  mod.rs
chatapp/: .gitlab-ci.yml  README.md  docker-compose.yml
chatapp/backend-chat/auth-service/: Cargo.toml  Dockerfile
chatapp/backend-chat/auth-service/.sqlx/: query-313d9249e8831038bc167d4cce63a2b4d63c7f429794d99b2005451abe6368cf.json  query-aa177422145e8db5ac46ee1989457a3c4d4712c500beac25650655f2b1adf80d.json  query-d05e35d7498fae3c77496c35dda16c8e7e88111f9522f3f2faae5eae12c558cb.json  query-d48047a6ea84ab46eb4fdef3b3b6a888710d25681e86666a72d293a7eed4ade3.json
chatapp/backend-chat/auth-service/src/: config.rs  models.rs
chatapp/backend-chat/auth-service/src/handlers/: auth.rs
chatapp/backend-chat/auth-service/src/utils/: hash.rs
chatapp/backend-chat/chat_news/: Cargo.toml  Dockerfile
chatapp/front-chat/: Dockerfile  package.json
chatapp/front-chat/src/: App.tsx  firebase.ts  global.d.ts  index.css  main.tsx
chatapp/front-chat/src/api/: dto.ts  (+2 more)
chatapp/k8s/: 00-namespace.yaml  01-secrets.yaml  02-scylla-external.yaml  05-front-chat.yaml  06-ingress.yaml
front-chat/: Dockerfile  package-lock.json  package.json  vite.config.ts
front-chat/src/: App.css  firebase.ts  markdown.css
front-chat/src/api/: auth.ts  useChatSocket.ts
front-chat/src/components/: Header.tsx  ProtectedRoute.tsx  WindowChat.tsx  WindowNews.tsx  WindowNotification.tsx
front-chat/src/hooks/: useAuth.ts  useChatContext.ts
front-chat/src/pages/: ChatPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx
front-chat/src/stores/: users.ts
front-chat/src/types/: chat.ts  user.ts
front-chat/src/utils/: mapEventToMessage.ts
k8s/: 03-auth-service.yaml  04-chat-service.yaml  05-front-chat.yaml  06-ingress.yaml  07-migrations.yaml  auth-service 2.yaml  chat-service.yaml  frontend 2.yaml  ingress-nginx.yaml  keycloak 2.yaml  redis.yaml
(+52 files in other folders)
