[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
http = "1.4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-core = "0.5.5"

# Utils
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# ------------------------------
# Databases + Kafka
# ------------------------------

# ScyllaDB driver
scylla = "0.8"

# Kafka Producer / Consumer
rdkafka = { version = "0.35", features = ["tokio"] }

# ------------------------------
# Auth / JWT
# ------------------------------
jsonwebtoken = "8"
tokio-stream = "0.1"

# Async error handling
anyhow = "1.0"
thiserror = "1.0"
headers = "0.4.1"
axum-extra = { version = "0.12", features = ["typed-header"] }
futures-util = "0.3"
tower-http = "0.5"