[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum
axum = { version = "0.7.9", features = ["macros", "json"] }

# HTTP headers
headers = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"

# SQLx (PostgreSQL)
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros"
] }

uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "0.32.7", features = ["tokio-comp"] }

# Security
argon2 = "0.5"
jsonwebtoken = "8"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Environment
dotenvy = "0.15"

# Errors
thiserror = "1"
anyhow = "1"

http = "1.4"